--- a/styles/styles.css
+++ b/styles/styles.css
@@ -174,6 +174,7 @@ section {
   align-items: center;
   position: relative;
 }
+
 .header-content .left-header .h-shape {
   transition: all 0.4s ease-in-out;
   width: 65%;
@@ -185,12 +186,13 @@ section {
   z-index: -1;
   clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
 }
+
 .header-content .left-header .image {
   border-radius: var(--br-sm-2);
   height: 90%;
   width: 68%;
   margin-left: 4rem;
-  background-color: var(--color-black);
+  background-color: transparent;
   transition: all 0.4s ease-in-out;
 }
 .header-content .left-header .image img {
@@ -199,6 +201,7 @@ section {
   object-fit: cover;
   transition: all 0.4s ease-in-out;
   filter: grayscale(100%);
+  border-radius: 50px;
 }
 .header-content .left-header .image img:hover {
   filter: grayscale(0);
@@ -972,8 +975,7 @@ section {
     font-size: 3rem;
   }
   .main-title h2 .bg-text {
-    font-size: 4rem;
+    fontsize: 4rem;
   }
 }
 
-/*# sourceMappingURL=styles.css.map */
